--- a/nyclean/package.json
+++ b/nyclean/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.0",
+    "leaflet": "^1.5.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
