--- a/nyclean/package.json
+++ b/nyclean/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "filereader": "^0.10.3",
     "firebase": "^6.3.0",
     "leaflet": "^1.5.1",
     "react": "^16.8.6",
